# transcript-python-bot

./: .env.example  Agent.md  DEPLOY_PYTHONANYWHERE.md  LOCAL_TESTING.md  cli-bot.py  main.py  pyproject.toml  requirements.txt
prompts/: transcript_prompts.yaml
src/: README.md
src/transcript_python_bot/: __init__.py  audio_transcribe.py  bot.py  checkLink.py  cli.py  config.py  delete_webhook.py  get_transcript.py  main.py  media_processing.py  notion.py  pipeline.py  set_webhook.py  transcript_handler.py  video_info.py  webhook.py  wsgi.py
